# cUR

./: .gitignore  .gitmodules  CMakeLists.txt  Kconfig  LICENSE  Makefile  README.md  format-src.sh  micropython.mk  pyproject.toml  setup.py  uUR.c
.github/workflows/: test.yml
c-urtypes/: Makefile  README.md  uURTypes.c
c-urtypes/src/: bip39.c  bip39.h  bytes_type.c  bytes_type.h  cbor_data.h  cbor_encoder.c  ec_key.c  hd_key.h  keypath.h  multi_key.h  registry.c  registry.h  utils.c  utils.h
c-urtypes/tests/: Makefile  README.md  test_account.c  test_bip39.c  test_bytes.c  test_bytes_text_string.c  test_output.c  test_psbt.c
python/: uUR.c
scripts/: coverage.sh
src/: bytewords.c  bytewords.h  cbor_encoder_lite.c  cbor_encoder_lite.h  cbor_lite.c  cbor_lite.h  crc32.c  crc32.h  fountain_decoder.c  fountain_decoder.h  fountain_encoder.c  fountain_encoder.h  fountain_types.h  fountain_utils.c  fountain_utils.h  ur.c  ur.h  ur_decoder.c  ur_decoder.h  ur_encoder.c  ur_encoder.h  utils.c  utils.h  xor_internal.h
src/sha256/: sha256.c  sha256.h  sha256_compat.h
src/types/: bip39.c  bip39.h  byte_buffer.c  byte_buffer.h  bytes_type.c  bytes_type.h  cbor_data.c  cbor_data.h  cbor_decoder.c  cbor_decoder.h  cbor_encoder.c  cbor_encoder.h  ec_key.c  ec_key.h  hd_key.c  hd_key.h  keypath.c  keypath.h  multi_key.c  multi_key.h  output.c  output.h  psbt.c  psbt.h  registry.c  registry.h  utils.c  utils.h
tests/: test_bip39.c  test_bytes.c  test_cross_implementation.sh  test_framework.h  test_harness.c  test_harness.h  test_output.c  test_print_fragments.c  test_psbt.c  test_python.py  test_ur_PSBT_decoder.c  test_ur_PSBT_encoder.c  test_ur_account_descriptor_decoder.c  test_ur_bip39_decoder.c  test_ur_bytes_decoder.c  test_ur_bytes_encoder.c  test_ur_decoder.c  test_ur_encoder.c  test_ur_envelope_api.c  test_ur_negative.c  test_ur_output_decoder.c  test_ur_output_descriptor_roundtrip.c  test_ur_output_encoder.c  test_ur_weighted_progress.c  test_utils.c  test_utils.h
tests/cross_implementation_tests/: test_cross_implementation.sh  test_print_fragments.c  test_print_psbt_fragments.c
tests/esp-idf-smoke/: CMakeLists.txt
tests/esp-idf-smoke/components/cUR/: CMakeLists.txt
tests/esp-idf-smoke/components/mbedtls_compat/: CMakeLists.txt
tests/esp-idf-smoke/components/mbedtls_compat/mbedtls/: sha256.h
tests/esp-idf-smoke/main/: CMakeLists.txt  app_main.c
tests/test_cases/: data_1.UR_object.txt  data_2.UR_fragments.txt  data_2.UR_object.txt  data_3.UR_fragments.txt  data_3.UR_object.txt  data_4.UR_fragments.txt  data_4.UR_object.txt  data_5.UR_object.txt
tests/test_cases/PSBTs/: PSBT_1.UR_fragments.txt  PSBT_5.UR_fragments.txt
tests/test_cases/account/: account_1.UR_fragments.txt  account_1.descriptor.txt
tests/test_cases/bip39/: mnemonic_1.UR.txt  mnemonic_1.words.txt
tests/test_cases/bytes/: bytes_1.UR_fragments.txt  bytes_1.decoded.txt  bytes_2.UR_fragments.txt  bytes_2.decoded.txt  bytes_3.UR_fragments.txt
tests/test_cases/output/: output_1.UR_fragments.txt  output_1.txt  output_2.UR_fragments.txt  output_2.txt  output_3.descriptor.txt  output_4.descriptor.txt  output_5.descriptor.txt  output_6.descriptor.txt  output_7.descriptor.txt  output_8.descriptor.txt
